--- a/CoreDemo/CoreDemo.csproj
+++ b/CoreDemo/CoreDemo.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="ViewComponents\CommentList.cs" />
+    <Content Include="ViewComponents\Comments\CommentList.cs" />
   </ItemGroup>
 
   <ItemGroup>
